# Tessera

./: CHANGELOG.md  MILESTONES.md  Makefile  README.md
.github/workflows/: arm-build.yml
arch/arm64/: arp.c  arp.h  audio_core.c  audio_core.h  audio_graph.c  audio_graph.h  audio_ringbuf.c  audio_ringbuf.h  audio_worker.c  audio_worker.h  bank.c  bank.h  blackbox.c  blackbox.h  budget.c  budget.h  context_switch.S  ctlmap.c  ctlmap.h  cvgate.c  cvgate.h  denorm.h  elf64.c  elf64.h  entry.S  exceptions.c  exceptions.h  fat.c  fat.h  graph_control.c  graph_control.h  graph_sched.c  graph_sched.h  hot_reload.c  hot_reload.h  io_quota.c  io_quota.h  irq.c  kernel.ld  (+94 more)
audio/: sine_gen.c
boot/: config.txt  start.S
docs/: build-arm.md  control-surface.md  demo.md  feature-ideas.md  getting-started.md  graph-scheduling.md  hardware-targets.md  hardware.md  latency.md  linux-host.md  patches.md  plugin-abi.md  reliability.md  shell.md  signal-io.md  syscalls.md  transport.md
drivers/: audio.c  dma.c  gic.c  gpio.c  i2s.c  i2s_capture.c  mailbox.c  mailbox.h  midi_uart.c  spi.c  uart_pl011.c
include/: audio_stream.h  dma.h  gic.h  gpio.h  i2s.h  i2s_capture.h  io.h  midi_uart.h  plugin_abi.h  sine_gen.h  spi.h  uart_pl011.h
plugins/: plugin.ld  ring_contract.h
scripts/: build-example-plugin.sh
sdk/: .gitignore  Makefile  Makefile.template  README.md  plugin_abi.h  tessera.h  tessera.ld
sdk/rust/tessera-plugin/: Cargo.toml  README.md
sdk/rust/tessera-plugin/src/: lib.rs
sdk/rust/tessera-plugin/tests/: gain_plugin.rs
tools/: golden_check.c  offline_host.c
(+199 files in other folders)
